# body-composition

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
.cursor/rules/: data-science.mdc  instructions.mdc
backend/: db.py  main.py  models.py
backend/database/: upload_data.py
backend/routers/: charts.py
frontend/: app.js  index.html  style.css
utils/: data_processing.py  visualization.py
