[project]
name = "body-composition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
